--- a/Blik Mac/GLAFileCollectionViewController.xib
+++ b/Blik Mac/GLAFileCollectionViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6250" systemVersion="13F34" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6250" systemVersion="14A388a" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6250"/>
@@ -177,7 +177,7 @@
                                                 </userDefinedRuntimeAttribute>
                                             </userDefinedRuntimeAttributes>
                                         </popUpButton>
-                                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="zgF-es-4hh">
+                                        <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zgF-es-4hh">
                                             <rect key="frame" x="122" y="4" width="124" height="23"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="23" id="tBu-ym-vsV"/>
@@ -232,7 +232,7 @@
                     </connections>
                 </menuItem>
                 <menuItem isSeparatorItem="YES" id="dP8-PR-piE"/>
-                <menuItem title="Change Default App for «kind» " id="uNM-gh-GyS">
+                <menuItem title="Change Default App for «kind» " hidden="YES" id="uNM-gh-GyS">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <menu key="submenu" title="Change Default App for «kind» " id="gDd-rk-7S7">
                         <items>
