--- a/Blik Mac/GLAAddNewProjectViewController.xib
+++ b/Blik Mac/GLAAddNewProjectViewController.xib
@@ -55,6 +55,12 @@
                             <integer key="value" value="-2"/>
                         </userDefinedRuntimeAttribute>
                         <userDefinedRuntimeAttribute type="boolean" keyPath="hasPrimaryStyle" value="YES"/>
+                        <userDefinedRuntimeAttribute type="number" keyPath="leftSpacing">
+                            <integer key="value" value="12"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="number" keyPath="rightSpacing">
+                            <integer key="value" value="12"/>
+                        </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                     <connections>
                         <action selector="confirmCreate:" target="-2" id="bZB-8q-tac"/>
